--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -17,18 +17,15 @@
                 </div>
 
                 <ul class="features__list">
-                    <li class="features__item">
-                        <span class="icon icon--features icon--timer"></span>
+                    <li class="features__item icon icon--features icon--timer">
                         Швидка доставка за 15 хвилин
                     </li>
 
-                    <li class="features__item">
-                        <span class="icon icon--features icon--delivery"></span>
+                    <li class="features__item icon icon--features icon--delivery">
                         Чемні кур’єри
                     </li>
 
-                    <li class="features__item">
-                        <span class="icon icon--features icon--restorant"></span>
+                    <li class="features__item icon icon--features icon--restorant">
                         Більше 500 закладів
                     </li>
                 </ul>
