--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -23,7 +23,7 @@
 
             <ul class="user-nav">
                 <li class="user-nav__item">
-                    <button class="user-nav__btn icon icon--search" type="button">
+                    <button class="user-nav__btn icon icon--user-nav icon--search" type="button">
                         <span class="sr-only">
                             Почати пошук
                         </span>
@@ -31,7 +31,7 @@
                 </li>
 
                 <li class="user-nav__item">
-                    <button class="user-nav__btn icon icon--cart" type="button">
+                    <button class="user-nav__btn icon icon--user-nav icon--cart" type="button">
                         <span class="sr-only">
                             Відкрити корзину
                         </span>
