--- a/src/module/index.html
+++ b/src/module/index.html
@@ -15,7 +15,8 @@
         </main>
     </div>
     @include('./footer/_footer.html')
-    <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="../../js/main.js"></script>
 </body>
 
 </html>
