--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -4,46 +4,144 @@
             Відгуки клієнтів
         </h2>
         <div class="review__inner">
-            <div class="review__content">
-                <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
-                    srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
-                    sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                <blockquote class="review__blockquote">
 
-                    <div class="review__paragraph">
-                        <p>
-                            SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний
-                            сайт
-                            та
-                            застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та
-                            дарує
-                            знижки на доставку - однозначно рекомендую!
-                        </p>
+            <div class="swiper" id='mswiper'>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="review__content">
+                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
+                                width="300" height="300"
+                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+                            <blockquote class="review__blockquote">
+
+                                <div class="review__paragraph">
+                                    <p>
+                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
+                                        Дуже зручний
+                                        сайт
+                                        та
+                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
+                                        проводить акції та
+                                        дарує
+                                        знижки на доставку - однозначно рекомендую!
+                                    </p>
+                                </div>
+
+                                <cite class="review__author">
+                                    Дарина
+                                </cite>
+                                <span class="review__caption">
+                                    Поціновувачка смачної їжі
+                                </span>
+                            </blockquote>
+                        </div>
                     </div>
+                    <div class="swiper-slide">
+                        <div class="review__content">
+                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
+                                width="300" height="300"
+                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+                            <blockquote class="review__blockquote">
 
-                    <cite class="review__author">
-                        Дарина
-                    </cite>
-                    <span class="review__caption">
-                        Поціновувачка смачної їжі
-                    </span>
-                </blockquote>
+                                <div class="review__paragraph">
+                                    <p>
+                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
+                                        Дуже зручний
+                                        сайт
+                                        та
+                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
+                                        проводить акції та
+                                        дарує
+                                        знижки на доставку - однозначно рекомендую!
+                                    </p>
+                                </div>
+
+                                <cite class="review__author">
+                                    Дарина
+                                </cite>
+                                <span class="review__caption">
+                                    Поціновувачка смачної їжі
+                                </span>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="review__content">
+                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
+                                width="300" height="300"
+                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+                            <blockquote class="review__blockquote">
+
+                                <div class="review__paragraph">
+                                    <p>
+                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
+                                        Дуже зручний
+                                        сайт
+                                        та
+                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
+                                        проводить акції та
+                                        дарує
+                                        знижки на доставку - однозначно рекомендую!
+                                    </p>
+                                </div>
+
+                                <cite class="review__author">
+                                    Дарина
+                                </cite>
+                                <span class="review__caption">
+                                    Поціновувачка смачної їжі
+                                </span>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="review__content">
+                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
+                                width="300" height="300"
+                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+                            <blockquote class="review__blockquote">
+
+                                <div class="review__paragraph">
+                                    <p>
+                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
+                                        Дуже зручний
+                                        сайт
+                                        та
+                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
+                                        проводить акції та
+                                        дарує
+                                        знижки на доставку - однозначно рекомендую!
+                                    </p>
+                                </div>
+
+                                <cite class="review__author">
+                                    Дарина
+                                </cite>
+                                <span class="review__caption">
+                                    Поціновувачка смачної їжі
+                                </span>
+                            </blockquote>
+                        </div>
+                    </div>
+                    ...
+                </div>
+
+                <div class="swiper__navigation">
+                    <div class="swiper-pagination"></div>
+
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
             </div>
 
-            <div class="review-slider">
-                <span class="review-slider__navigation review-slider__navigation--left">
-                    <span class="sr-only">Перейти до попереднього відгуку клієнта</span>
-                </span>
-                <ul class="review-slider__dots">
-                    <li class="review-slider__item"></li>
-                    <li class="review-slider__item"></li>
-                    <li class="review-slider__item"></li>
-                    <li class="review-slider__item"></li>
-                </ul>
-                <span class="review-slider__navigation review-slider__navigation--right">
-                    <span class="sr-only">Перейти до наступного відгуку клієнта</span>
-                </span>
-            </div>
+
+
         </div>
     </div>
 </section>
