--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -5,19 +5,17 @@
         </h2>
         <div class="review__inner">
 
-            <div class="swiper" id='mswiper'>
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <div class="review__content">
-                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+            <div class="swiper review-slider">
+                <div class="swiper-wrapper review-slider__wrapper">
+                    <div class="swiper-slide review-slider__item">
+                        <div class="review-card">
+                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
                                 alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
                                 width="300" height="300"
                                 sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review__blockquote">
+                            <blockquote class="review-card__blockquote">
 
-                                <div class="review__paragraph">
+                                <div class="review-card__text">
                                     <p>
                                         SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
                                         Дуже зручний
@@ -30,24 +28,24 @@
                                     </p>
                                 </div>
 
-                                <cite class="review__author">
+                                <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review__caption">
+                                <span class="review-card__acaption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="review__content">
-                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                    <div class="swiper-slide review-slider__item">
+                        <div class="review-card">
+                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
                                 alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
                                 width="300" height="300"
                                 sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review__blockquote">
+                            <blockquote class="review-card__blockquote">
 
-                                <div class="review__paragraph">
+                                <div class="review-card__text">
                                     <p>
                                         SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
                                         Дуже зручний
@@ -60,24 +58,24 @@
                                     </p>
                                 </div>
 
-                                <cite class="review__author">
+                                <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review__caption">
+                                <span class="review-card__acaption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="review__content">
-                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                    <div class="swiper-slide review-slider__item">
+                        <div class="review-card">
+                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
                                 alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
                                 width="300" height="300"
                                 sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review__blockquote">
+                            <blockquote class="review-card__blockquote">
 
-                                <div class="review__paragraph">
+                                <div class="review-card__text">
                                     <p>
                                         SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
                                         Дуже зручний
@@ -90,24 +88,24 @@
                                     </p>
                                 </div>
 
-                                <cite class="review__author">
+                                <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review__caption">
+                                <span class="review-card__acaption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="review__content">
-                            <img class="review__img" src="../../images/review/daryna@1x.webp"
+                    <div class="swiper-slide review-slider__item">
+                        <div class="review-card">
+                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
                                 alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
                                 width="300" height="300"
                                 sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review__blockquote">
+                            <blockquote class="review-card__blockquote">
 
-                                <div class="review__paragraph">
+                                <div class="review-card__text">
                                     <p>
                                         SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
                                         Дуже зручний
@@ -120,10 +118,10 @@
                                     </p>
                                 </div>
 
-                                <cite class="review__author">
+                                <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review__caption">
+                                <span class="review-card__acaption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
@@ -132,11 +130,15 @@
                     ...
                 </div>
 
-                <div class="swiper__navigation">
-                    <div class="swiper-pagination"></div>
 
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                <div class="review-slider__actions slider-actions">
+                    <button
+                        class="review-slider__btn review-slider__btn--next slider-actions__btn slider-actions__btn--next"
+                        type="button"></button>
+                    <div class="review-slider__dots slider-actions__dots"></div>
+                    <button
+                        class="review-slider__btn review-slider__btn--prev slider-actions__btn slider-actions__btn--prev"
+                        type="button"></button>
                 </div>
             </div>
 
