--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -17,15 +17,15 @@
                 </div>
 
                 <ul class="features__list">
-                    <li class="features__item icon icon--features icon--timer">
+                    <li class="features__item icon icon--timer">
                         Швидка доставка за 15 хвилин
                     </li>
 
-                    <li class="features__item icon icon--features icon--delivery">
+                    <li class="features__item icon icon--delivery">
                         Чемні кур’єри
                     </li>
 
-                    <li class="features__item icon icon--features icon--restorant">
+                    <li class="features__item icon icon--restorant">
                         Більше 500 закладів
                     </li>
                 </ul>
