--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -31,12 +31,44 @@
                                 <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review-card__acaption">
+                                <span class="review-card__caption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
                         </div>
                     </div>
+                    <div class="swiper-slide review-slider__item
+                    ">
+                        <div class="review-card">
+                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
+                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
+                                width="300" height="300"
+                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+                            <blockquote class="review-card__blockquote">
+
+                                <div class="review-card__text">
+                                    <p>
+                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
+                                        Дуже зручний
+                                        сайт
+                                        та
+                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
+                                        проводить акції та
+                                        дарує
+                                        знижки на доставку - однозначно рекомендую!
+                                    </p>
+                                </div>
+
+                                <cite class="review-card__author">
+                                    Дарина
+                                </cite>
+                                <span class="review-card__caption">
+                                    Поціновувачка смачної їжі
+                                </span>
+                            </blockquote>
+                        </div>
+                    </div>
+
                     <div class="swiper-slide review-slider__item">
                         <div class="review-card">
                             <img class="review-card__img" src="../../images/review/daryna@1x.webp"
@@ -61,12 +93,13 @@
                                 <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review-card__acaption">
+                                <span class="review-card__caption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
                         </div>
                     </div>
+
                     <div class="swiper-slide review-slider__item">
                         <div class="review-card">
                             <img class="review-card__img" src="../../images/review/daryna@1x.webp"
@@ -91,37 +124,7 @@
                                 <cite class="review-card__author">
                                     Дарина
                                 </cite>
-                                <span class="review-card__acaption">
-                                    Поціновувачка смачної їжі
-                                </span>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <div class="swiper-slide review-slider__item">
-                        <div class="review-card">
-                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
-                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
-                                width="300" height="300"
-                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review-card__blockquote">
-
-                                <div class="review-card__text">
-                                    <p>
-                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
-                                        Дуже зручний
-                                        сайт
-                                        та
-                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
-                                        проводить акції та
-                                        дарує
-                                        знижки на доставку - однозначно рекомендую!
-                                    </p>
-                                </div>
-
-                                <cite class="review-card__author">
-                                    Дарина
-                                </cite>
-                                <span class="review-card__acaption">
+                                <span class="review-card__caption">
                                     Поціновувачка смачної їжі
                                 </span>
                             </blockquote>
@@ -130,19 +133,16 @@
                     ...
                 </div>
 
-
                 <div class="review-slider__actions slider-actions">
                     <button
-                        class="review-slider__btn review-slider__btn--next slider-actions__btn slider-actions__btn--next"
+                        class="review-slider__btn review-slider__btn--prev slider-actions__btn slider-actions__btn--prev icon icon--prev"
                         type="button"></button>
                     <div class="review-slider__dots slider-actions__dots"></div>
                     <button
-                        class="review-slider__btn review-slider__btn--prev slider-actions__btn slider-actions__btn--prev"
+                        class="review-slider__btn review-slider__btn--next slider-actions__btn slider-actions__btn--next icon icon--next"
                         type="button"></button>
                 </div>
             </div>
-
-
 
         </div>
     </div>
