--- a/src/module/burgerMenu/_burgerMenu.html
+++ b/src/module/burgerMenu/_burgerMenu.html
@@ -1,18 +1,18 @@
-<div class="burger__inner">
+<div class="mobile-menu">
 
     <button class="burger" type="button">
         <span class="burger__line"></span>
         <span class="sr-only">Відкрити меню</span>
     </button>
 
-        <nav class="burger__nav">
-            <div class="burger__container">
+        <nav class="mobile-menu__nav">
+            <div class="mobile-menu__container">
 
-            <a class="logo burger__logo" href="#header">
+            <a class="logo mobile-menu__logo" href="#header">
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
-            <ul class="burger__list">
+            <ul class="mobile-menu__list">
                 <li class="menu__item">
                     <a class="menu__link menu__link--active" href="#header">Головна</a>
                 </li>
