--- a/src/module/productcard/_productCard.html
+++ b/src/module/productcard/_productCard.html
@@ -1,9 +1,10 @@
-<article class="product-card">
-    <a class="link product-card__link" href="#">
-        <img class="product-card__img" src="./images/categories/2@1x.webp"
-            alt="фотографія чізбургера з листям салату" width="140" height="140">
-        <h3 class="link product-card__title">Чізбургер з листям салату</h3>
-        <span class="product-card__price">160 грн.</span>
-    </a>
-    <button class="btn product-card__btn" type="button">До кошика</button>
-</article>
+<div class="@cardClass">
+    <article class="product-card">
+        <a class="link product-card__link" href="#">
+            <img class="product-card__img" src="@productImageUrl" alt="фотографія @productAlt" width="140" height="140">
+            <h3 class="link product-card__title">@productTitle</h3>
+            <span class="product-card__price">@productPrice</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</div>
