--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -40,7 +40,7 @@
                 </li>
             </ul>
 
-            @include('../burgerMenu/_burgerMenu.html')
+            <!-- @include('../burgerMenu/_burgerMenu.html') -->
 
         </nav>
     </div>
