--- a/src/module/productcard/_productCard.html
+++ b/src/module/productcard/_productCard.html
@@ -1,4 +1,4 @@
-<div class="@cardClass">
+<li class="@productClass">
     <article class="product-card">
         <a class="link product-card__link" href="#">
             <img class="product-card__img" src="@productImageUrl" alt="фотографія @productAlt" width="140" height="140">
@@ -7,4 +7,4 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</div>
+</li>
