--- a/src/module/footer/_footer.html
+++ b/src/module/footer/_footer.html
@@ -9,7 +9,19 @@
                     <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
                 </a>
 
-                @include('../form/_form.html')
+                <form class="form" action="#">
+
+                    <label class="form__label" for="email">
+                        <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
+                            required>
+                        <span class="sr-only">Впишіть ваш імейл</span>
+                    </label>
+
+                    <button class="btn form__btn icon icon--telegram" type="submit">
+                        Підписатися
+                    </button>
+
+                </form>
 
             </div>
 
