--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -3,132 +3,33 @@
         <h2 class="title review__title">
             Відгуки клієнтів
         </h2>
+
         <div class="review__inner">
 
             <div class="swiper review-slider">
                 <div class="swiper-wrapper review-slider__wrapper">
                     <div class="swiper-slide review-slider__item">
-                        <div class="review-card">
-                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
-                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
-                                width="300" height="300"
-                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review-card__blockquote">
 
-                                <div class="review-card__text">
-                                    <p>
-                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
-                                        Дуже зручний
-                                        сайт
-                                        та
-                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
-                                        проводить акції та
-                                        дарує
-                                        знижки на доставку - однозначно рекомендую!
-                                    </p>
-                                </div>
+                        @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
 
-                                <cite class="review-card__author">
-                                    Дарина
-                                </cite>
-                                <span class="review-card__caption">
-                                    Поціновувачка смачної їжі
-                                </span>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <div class="swiper-slide review-slider__item
-                    ">
-                        <div class="review-card">
-                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
-                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
-                                width="300" height="300"
-                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review-card__blockquote">
-
-                                <div class="review-card__text">
-                                    <p>
-                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
-                                        Дуже зручний
-                                        сайт
-                                        та
-                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
-                                        проводить акції та
-                                        дарує
-                                        знижки на доставку - однозначно рекомендую!
-                                    </p>
-                                </div>
-
-                                <cite class="review-card__author">
-                                    Дарина
-                                </cite>
-                                <span class="review-card__caption">
-                                    Поціновувачка смачної їжі
-                                </span>
-                            </blockquote>
-                        </div>
                     </div>
 
                     <div class="swiper-slide review-slider__item">
-                        <div class="review-card">
-                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
-                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
-                                width="300" height="300"
-                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review-card__blockquote">
 
-                                <div class="review-card__text">
-                                    <p>
-                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
-                                        Дуже зручний
-                                        сайт
-                                        та
-                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
-                                        проводить акції та
-                                        дарує
-                                        знижки на доставку - однозначно рекомендую!
-                                    </p>
-                                </div>
+                        @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
 
-                                <cite class="review-card__author">
-                                    Дарина
-                                </cite>
-                                <span class="review-card__caption">
-                                    Поціновувачка смачної їжі
-                                </span>
-                            </blockquote>
-                        </div>
                     </div>
 
                     <div class="swiper-slide review-slider__item">
-                        <div class="review-card">
-                            <img class="review-card__img" src="../../images/review/daryna@1x.webp"
-                                alt="Щаслива дівчина з гамбургером" srcset="../../images/review/daryna@2x.webp 2000w"
-                                width="300" height="300"
-                                sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
-                            <blockquote class="review-card__blockquote">
 
-                                <div class="review-card__text">
-                                    <p>
-                                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті.
-                                        Дуже зручний
-                                        сайт
-                                        та
-                                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто
-                                        проводить акції та
-                                        дарує
-                                        знижки на доставку - однозначно рекомендую!
-                                    </p>
-                                </div>
+                        @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
 
-                                <cite class="review-card__author">
-                                    Дарина
-                                </cite>
-                                <span class="review-card__caption">
-                                    Поціновувачка смачної їжі
-                                </span>
-                            </blockquote>
-                        </div>
+                    </div>
+
+                    <div class="swiper-slide review-slider__item">
+
+                        @loop('../reviewCard/_reviewCard.html', './review/_reviews.json')
+
                     </div>
                 </div>
 
